java8.spoofax3/test/statics/java/classes/methods/innerclassformalunbound.no.spt.bak
module classes/methods/innerclassformalunbound_no

language metaborg-java

test innerclassformalunbound [[

test;



// error: cannot find symbol

[A]
public class A {}

[B]
public class B {
    public void b(A a, A.I i) {}
}


]] analysis fails
   run javacFails to ""
